# EQUITYINTELLIGENCE

./: .env.example  .gitignore  LICENSE  README.md  create_sample_portfolio.py  main.py  pyproject.toml
app/: __init__.py  config.py  db.py  db_ops.py  llm.py  main.py  models.py  privacy.py  router.py  state.py
app/agents/: __init__.py  dividend_agent.py  graph.py  pnl_agent.py  portfolio_agent.py  stock_analysis_agent.py  supervisor.py
app/auth/: models.py  router.py  service.py
app/observability/: middleware.py  router.py  tracer.py
app/templates/: project_detail.html
app/tools/: __init__.py  corporate_actions.py  dividend_fetcher.py  eligibility_checker.py  excel_reader.py  holding_timeline.py  linearization.py  pnl_calculator.py  registry.py  web_research.py
data/: mapping_plan_6a402aa702412bf2ee08ad77_6a410a87b1fbbf265348197d.json  portfolio_6a402aa702412bf2ee08ad77_6a410e95c9f0cbeda4aeae17.xlsx  portfolio_6a402aa702412bf2ee08ad77_6a4112e1629b30045097e984.xlsx
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  globals.css
frontend/src/api/: client.ts
frontend/src/auth/: AuthContext.tsx  ProtectedRoute.tsx
frontend/src/hooks/: useSSEStream.ts  useSheetParser.ts
frontend/src/lib/: agentLabels.ts  formatInr.ts
frontend/src/pages/: LoginPage.tsx  ProjectDetailPage.tsx  ProjectsPage.tsx  RegisterPage.tsx
frontend/src/store/: appStore.ts
scratch/: linearization.py
tests/: __init__.py  test_excel_reader.py  test_pnl.py  test_stock_analysis.py  test_timeline.py
(+22 files in other folders)
