[project]
name = "stock-intelligence"
version = "0.1.0"
description = "A production-grade Stock Intelligence Platform using LangGraph and FastAPI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "pydantic>=2.7.4",
    "pydantic-settings>=2.3.3",
    "pandas>=2.2.2",
    "openpyxl>=3.1.5",
    "yfinance>=0.2.40",
    "langgraph>=0.0.60",
    "langchain>=0.2.5",
    "langchain-core>=0.2.9",
    "langchain-openai>=0.1.9",
    "langchain-google-genai>=1.0.6",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.9",
    "requests>=2.32.0",
    "motor>=3.5.0",
    "pymongo>=4.8.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "email-validator>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2.2",
    "ruff>=0.4.9",
    "black>=24.4.2",
    "mypy>=1.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
